[package]
name = "ygg-peer-checker"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rcgen = "0.13"
webpki-roots = "0.26"
futures = "0.3"
chrono = "0.4"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
